# a2a-deep-research-network

./: .env.example  .gitignore  LICENSE  README.md  demo.py  pyproject.toml
.github/workflows/: ci.yml
a2a_research/: __init__.py  __main__.py  cli.py  config.py  executor_base.py  gemini.py  server.py
a2a_research/agents/: analyst.py  critic.py  retriever.py
a2a_research/host/: orchestrator.py
docs/: ARCHITECTURE.md  ROADMAP.md  VERIFIED_API.md
tests/: conftest.py  test_cards.py  test_executor_base.py  test_gemini_stub.py  test_host_orchestrator.py  test_retriever.py
