[project]
name = "a2a-agent-network"
version = "0.1.0"
description = "A Deep Research Network of specialist agents that discover and collaborate over Google's Agent2Agent (A2A) protocol, orchestrated by a Google ADK host agent."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "a2a-sdk==0.3.26",
    "click>=8.4.1",
    "google-adk==2.2.0",
    "httpx>=0.28.1",
    "uvicorn>=0.49.0",
]
